<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:theme="@style/Theme.MyApplication"
    android:layout_width="350dp"
    android:layout_height="200dp"
    android:layout_marginTop="100dp"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:id="@+id/addTaskLinearLayout">

        <TextView
            android:id="@+id/newSubtaskTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/add_subtask"
            android:textSize="13pt"
            android:textColor="?attr/subTaskCreateClr"
            />

        <EditText
            android:id="@+id/newSubtaskName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginVertical="15dp"
            android:padding="5dp"
            android:hint="@string/subtask_name"
            android:inputType="textCapWords"
            android:autofillHints="" />

</LinearLayout>