<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:longClickable="true">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSubtasks"
        android:layout_width="match_parent"
        android:layout_height="480dp"
        >


    </androidx.recyclerview.widget.RecyclerView>

    <ProgressBar
        android:id="@+id/ProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_gravity="center_horizontal"
        android:layout_width="300dp"
        android:layout_height="20dp"
        android:indeterminate="false"
        android:maxHeight="10dip"
        android:minHeight="10dip"
        android:progressDrawable="@drawable/greenprogress" />

</LinearLayout>